<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_title"
        android:orientation="vertical"
        android:padding="10dip">

        <TextView
            android:id="@+id/dlgTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/setMinutes"
            android:textColor="@color/txtDialogTitle"
            android:textSize="18dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip">

        <TextView
            android:id="@+id/redName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dip"
            android:text="@string/redTitle"
            android:textSize="16dip" />

        <EditText
            android:id="@+id/redMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="@string/digits"
            android:hint="@string/lbMin"
            android:inputType="number"
            android:text="0"
            android:textSize="16dip" />


        <ImageButton
            android:id="@+id/redSubtractNumber"
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:layout_gravity="right|center_vertical"
            android:background="@drawable/bg_btn_increase_decrease"
            android:scaleType="center"
            android:src="@drawable/decrease" />

        <ImageButton
            android:id="@+id/redAddNumber"
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:background="@drawable/bg_btn_increase_decrease"
            android:scaleType="center"
            android:src="@drawable/increase" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip">

        <TextView
            android:id="@+id/greenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dip"
            android:text="@string/greenTitle"
            android:textSize="16dip" />

        <EditText
            android:id="@+id/greenMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="@string/digits"
            android:hint="@string/lbMin"
            android:inputType="number"
            android:text="0"
            android:textSize="16dip" />


        <ImageButton
            android:id="@+id/greenSubtractNumber"
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:layout_gravity="right|center_vertical"
            android:background="@drawable/bg_btn_increase_decrease"
            android:scaleType="center"
            android:src="@drawable/decrease" />

        <ImageButton
            android:id="@+id/greenAddNumber"
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:background="@drawable/bg_btn_increase_decrease"
            android:scaleType="center"
            android:src="@drawable/increase" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip">

        <TextView
            android:id="@+id/yellowName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dip"
            android:text="@string/yellowTitle"
            android:textSize="16dip" />

        <EditText
            android:id="@+id/yellowMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="@string/digits"
            android:hint="@string/lbMin"
            android:inputType="number"
            android:text="0"
            android:textSize="16dip" />


        <ImageButton
            android:id="@+id/yellowSubtractNumber"
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:layout_gravity="right|center_vertical"
            android:background="@drawable/bg_btn_increase_decrease"
            android:scaleType="center"
            android:src="@drawable/decrease" />

        <ImageButton
            android:id="@+id/yellowAddNumber"
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:background="@drawable/bg_btn_increase_decrease"
            android:scaleType="center"
            android:src="@drawable/increase" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <include layout="@layout/inc_confirm_btn" />
    </LinearLayout>

</LinearLayout>