<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="34dip"
        android:background="@color/menuLayout"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/summaryLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/menuSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:text="@string/menuSummary"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/titleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="123"
                android:textSize="18sp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/currentLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/menuCurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dip"
                    android:paddingRight="8dip"
                    android:text="@string/menuCurrent"
                    android:textSize="18sp"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/historyLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/menuHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dip"
                    android:paddingRight="8dip"
                    android:text="@string/menuHistory"
                    android:textSize="18sp"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/settingLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/menuSetting"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:padding="6dip"
                    android:src="@drawable/setting"/>

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <!-- upper area -->

            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="108dip"
                android:orientation="vertical"/>

            <!-- bottom area -->

            <LinearLayout
                android:id="@+id/bottom_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/black"
                android:orientation="vertical">

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.1dip"
                    android:layout_marginBottom="2dip"
                    android:background="@color/divider"/>

                <HorizontalScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/bottom_layout"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"/>
                </HorizontalScrollView>
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/message"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/lbNoOrder"
            android:textColor="@color/white"
            android:textSize="18dip"
            android:visibility="gone"/>
    </FrameLayout>

</LinearLayout>